--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </nav>
         <div class="col-md-12 pt-3">
             <h1>Dashboard:</h1>
-            <table id="myTable" class="table table-striped table-hover">
+            <table class="table table-striped table-hover">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -54,7 +54,7 @@
                         <th>Remove</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="myTable">
                     <tr>
                         <td>Steph</td>
                         <td>Warriors</td>
