--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </nav>
         <div class="col-md-12 pt-3">
             <h1>Dashboard:</h1>
-            <table class="table table-striped table-hover">
+            <table id="myTable" class="table table-striped table-hover">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -54,37 +54,37 @@
                         <th>Remove</th>
                     </tr>
                 </thead>
-                <tbody id="myTable">
-                    <tr>
+                <tbody>
+                    <tr id="0">
                         <td>Steph</td>
                         <td>Warriors</td>
                         <td>Yes</td>
-                        <td class="mt-10"><button onclick="myFunction()" type="submit" class="btn btn-danger btn-sm"><strong>X</strong></button></td>
+                        <td class="mt-10"><button value="Delete" onclick="deleteRow(this)" class="btn btn-danger btn-sm"><strong>X</strong></button></td>
                     </tr>
-                    <tr>
+                    <tr id="1">
                         <td>Lebron</td>
                         <td>Cavaliers</td>
                         <td>Yes</td>
-                        <td class="mt-10"><button onclick="myFunction()" class="btn btn-danger btn-sm"><strong>X</strong></button></td>
+                        <td class="mt-10"><button value="Delete" onclick="deleteRow(this)" class="btn btn-danger btn-sm"><strong>X</strong></button></td>
                     </tr>
-                    <tr>
+                    <tr id="2">
                         <td>Dwayne</td>
                         <td>Heat</td>
                         <td>Yes</td>
-                        <td class="mt-10"><button onclick="myFunction()" class="btn btn-danger btn-sm"><strong>X</strong></button></td>
+                        <td class="mt-10"><button value="Delete" onclick="deleteRow(this)" class="btn btn-danger btn-sm"><strong>X</strong></button></td>
                     </tr>
-                    <tr>
+                    <tr id="3">
                         <td>Kobe</td>
-                        <td>Dead</td>
+                        <td>Sorry :(</td>
                         <td>Yes <span class="badge badge-warning">Last</span></td>
-                        <td class="mt-10"><button onclick="myFunction()" class="btn btn-danger btn-sm"><strong>X</strong></button></td>
+                        <td class="mt-10"><button value="Delete" onclick="deleteRow(this)" class="btn btn-danger btn-sm"><strong>X</strong></button></td>
                     </tr>
-                    <tr>
+                    <tr id="4">
                         <td>Ismael</td>
                         <td>Celta do pai</td>
                         <td>Yes <span class="badge badge-success">First</span>
                         </td>
-                        <td class="mt-10"><button onclick="myFunction()" class="btn btn-danger btn-sm"><strong>X</strong></button></td>
+                        <td class="mt-10"><button value="Delete" onclick="deleteRow(this)" class="btn btn-danger btn-sm"><strong>X</strong></button></td>
                     </tr>
                 </tbody>
             </table>
